1. when dropplayers is empty, bench players not showing issue fixed
2. minor fixes for the design

--- a/src/style/PlayerSpec.css
+++ b/src/style/PlayerSpec.css
@@ -139,7 +139,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: #1e1e1e;
+  /* background-color: #1e1e1e; */
   color: #bca988;
   /* outline: 1px solid #333;   */
   font-size: 14px;
