--- a/src/style/SearchPlayer.css
+++ b/src/style/SearchPlayer.css
@@ -26,7 +26,7 @@
     /* min-height: 100px; */
     /* border-radius: 8px; */
     /* margin: 0 0 10px 0; */
-    outline: 1px solid gray;
+    /* outline: 1px solid gray; */
 }
 
 #search-player-list {
