--- a/src/style/SquadBuilder.css
+++ b/src/style/SquadBuilder.css
@@ -32,7 +32,7 @@
 }
 
 .squad-bench {
-  width: 100%;
+  width: 99%;
   height: 150px;
   position: relative;
   border-radius: 12px;
